# cpp-compute-pool

./: .gitignore  CMakeLists.txt  cpphack.cbp  cpphack_common.cbp
.github/workflows/: build.yml
Testing/Temporary/: CTestCostData.txt
src/cpp/: CMakeLists.txt  cpphack  cpphack.cbp  main.cpp
src/cpp/async/: AsyncCompute.cpp  AsyncCompute.h  CMakeLists.txt  async_pool.cbp
src/cpp/math/: fast_boost_distributions.hpp  fast_boost_special_functions.hpp
test/cpp/: CMakeLists.txt  cpphack_tests  testing.cbp
test/cpp/async/: AsyncComputeTest.cpp  AsyncComputeTest.h
